--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,42 +1,34 @@
-# This is a basic workflow to help you get started with Actions
+name: Fortran CI
 
-name: CI
+on: [push, pull_request]
 
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  cpu-gfortran:
+    name: Build & Run (gfortran CPU)
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      - name: Setup Fortran
+      - name: Setup Fortran (gfortran)
         uses: fortran-lang/setup-fortran@v1.6.3
-        
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-          nvfortran -acc -Minfo=accel main.f90 -o main
-          ./main
+        with:
+          compiler: gcc          # or gfortran
+          version: 13            # version you want
+      - name: Build
+        run: ${{ env.FC }} main.f90 -o main   # env.FC is provided by setup-fortran
+      - name: Run
+        run: ./main
 
+  openacc-nvfortran:
+    name: Build & Run (nvfortran + OpenACC)
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup Fortran (nvfortran)
+        uses: fortran-lang/setup-fortran@v1.6.3
+        with:
+          compiler: nvidia-hpc    # this picks nvfortran
+          version: 25.1           # or another version that supports your OpenACC needs
+      - name: Build with nvfortran
+        run: ${{ env.FC }} -acc -Minfo=accel main.f90 -o main
+      - name: Run
+        run: ./main
